[gd_scene load_steps=8 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://player.gd" type="Script" id=2]
[ext_resource path="res://_addons/movement/top_down_movement.tscn" type="PackedScene" id=3]
[ext_resource path="res://_addons/user_input/intended_direction.tscn" type="PackedScene" id=4]
[ext_resource path="res://weapons/swing.gd" type="Script" id=5]
[ext_resource path="res://_addons/health/health_bar.tscn" type="PackedScene" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.0

[node name="player" type="RigidBody2D"]
collision_layer = 2
collision_mask = 5
mode = 2
can_sleep = false
linear_damp = 0.0
script = ExtResource( 2 )

[node name="camera_2d" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_top = 0
smoothing_enabled = true
smoothing_speed = 6.0

[node name="collision_shape_2d" type="CollisionShape2D" parent="."]
position = Vector2( 0, -4 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="icon" type="Sprite" parent="."]
position = Vector2( 0, -10 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[node name="movement" parent="." instance=ExtResource( 3 )]
body_path = NodePath("..")
direction_path = NodePath("../intended_direction")
acceleration = 2000.0
default_max_speed = 300.0

[node name="intended_direction" parent="." instance=ExtResource( 4 )]

[node name="slowdown" type="Label" parent="."]
visible = false
margin_left = -18.0
margin_top = -34.0
margin_right = 22.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="swing" type="Node2D" parent="."]
script = ExtResource( 5 )
direction_path = NodePath("../intended_direction")

[node name="icon" type="Sprite" parent="swing"]
visible = false
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="canvas_layer" type="CanvasLayer" parent="."]

[node name="margin_container" type="MarginContainer" parent="canvas_layer"]
margin_right = 96.0
margin_bottom = 12.0
custom_constants/margin_top = 8
custom_constants/margin_left = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="health_bar" parent="canvas_layer/margin_container" instance=ExtResource( 6 )]
margin_left = 8.0
margin_top = 8.0
margin_right = 96.0
margin_bottom = 12.0
max_health = 10000.0
current_health = 10000.0
